--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -13,7 +13,7 @@
       "@/*": ["src/*"]
     },
     "resolveJsonModule": true,
-    "types": ["vite/client", "@vue/runtime-core"],
+    "types": ["vite/client", "@vue/runtime-core", "vue/jsx"],
     "allowImportingTsExtensions": true,
     "strict": true,
     "noFallthroughCasesInSwitch": true,
@@ -23,6 +23,5 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "references": [{ "path": "./tsconfig.node.json" }],
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
