--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "index.js",
   "scripts": {
     "test": "pnpm --filter vccs test",
+    "dev": "pnpm --filter vccs dev",
     "test:coverage": "vitest run --coverage",
     "storybook": "storybook dev -p 6006",
     "play": "pnpm --filter play dev",
@@ -20,10 +21,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.1.0",
-    "animejs": "^4.0.2",
     "decimal.js-light": "^2.5.1",
-    "motion-v": "^1.4.0",
-    "pinia": "^3.0.2"
+    "motion-v": "^1.4.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.3",
