fix: clean up tsconfig and Vite config includes/excludes; adjust YAxis settings type

--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -27,7 +27,11 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "include": ["./src/**/*.vue", "./src/**/*.ts", "./src/**/*.tsx"],
+  "include": [
+    "./src/**/*.vue",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ],
   "exclude": [
     "node_modules"
   ]
